# quiz-pool

./: .gitignore  README.md  main.py  pyproject.toml  sample_quiz.json  sample_quiz.quizpool  scheme.json
src/quiz_pool/: main.py
src/quiz_pool/schemas/: scheme.json
tests/: test_grading_scoring.py  test_latex_export.py  test_project_storage.py  test_reference_model.py
tex_templates/: exam_template.tex  pool_template.tex
web/: app.css  app.js  file-browser.js  generator.html  generator.js  grading.html  grading.js  index.html  rich-text.js  system-file-dialog.js  viewer.html  viewer.js  welcome.html  welcome.js
