[project]
name = "quiz-pool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "omr",
    "pyppeteer>=2.0.0",
    "segno>=1.6.6",
]

[tool.uv.sources]
omr = { git = "https://github.com/vogulcan/omr.git"}
