[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quiz-pool"
version = "0.1.0"
description = "Simple, schema-driven quiz authoring, exam generation, OMR printing, and grading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "omr",
    "pyppeteer>=2.0.0",
    "segno>=1.6.6",
]

[project.scripts]
quiz_pool = "quiz_pool.main:main"

[tool.uv.sources]
omr = { git = "https://github.com/vogulcan/omr.git"}

[tool.hatch.build.targets.wheel]
packages = ["src/quiz_pool"]
